# platformer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.assets/characters/knight-1/: credits.txt
.assets/characters/knight-2/: credits.txt
.assets/map/: credits.txt
Titan/: Titan.sln  main.cpp
Titan/Titan/: Titan.vcxproj  Titan.vcxproj.filters  main.cpp
Titan/Titan/res/: enemy_1.xml  hero.xml
Titan/Titan/res/enemy/: enemy1.xml
Titan/Titan/res/img/: Thumbs.db
Titan/Titan/res/levels/: level_1.tmx
Titan/Titan/res/objects/: torch_and_shadow.xml
Titan/Titan/res/player/: hero.xml
Titan/res/enemy/: enemy1.xml
Titan/res/objects/: torch.xml
Titan/res/player/: hero_bullet.xml
Titan/src/Entity/: Bullet.cpp  Bullet.h  Config.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Torch.cpp  Torch.h
Titan/src/Menu/: GameOverScreen.h  GameScreen.h  GraphicsScreen.h  MenuScreen.cpp  MenuScreen.h  MusicScreen.cpp  MusicScreen.h  OptionsScreen.cpp  OptionsScreen.h  Screen.h
assets/map/: level-1.tmx
assets/player/: hero.xml
res/: castle-tileset.tsx
res/enemy/: enemy2.xml
res/levels/: level-1.tmx
res/player/: knight-idle.xml
src/Entity/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp
src/Entity/Animation/: Animation.h  AnimationManager.h
src/Entity/Level/: Level.cpp  Level.h
src/Menu/Graphics/: ScreenSettings.cpp  ScreenSettings.h
src/Menu/Music/: MusicSettings.h
src/Menu/Screen/: GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GraphicsScreen.cpp  MenuScreen.cpp  MenuScreen.h  OptionsScreen.cpp  Screen.h
(+68 files in other folders)
